--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -164,3 +164,15 @@ button {
 
   background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(0, 0, 0));
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(#190873, black);
+  border-radius: 5px;
+}
