--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -176,3 +176,15 @@ button {
   background-image: linear-gradient(#190873, black);
   border-radius: 5px;
 }
+input[type="file"]::file-selector-button {
+  border: 2px solid #6c5ce7;
+  padding: 0.2em 0.4em;
+  border-radius: 0.2em;
+  background-color: #a29bfe;
+  transition: 1s;
+}
+
+input[type="file"]::file-selector-button:hover {
+  background-color: #81ecec;
+  border: 2px solid #00cec9;
+}
