--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -177,14 +177,18 @@ button {
   border-radius: 5px;
 }
 input[type="file"]::file-selector-button {
-  border: 2px solid #6c5ce7;
+  border: 2px dotted #6c5ce7;
   padding: 0.2em 0.4em;
   border-radius: 0.2em;
-  background-color: #a29bfe;
+  opacity: 50%;
   transition: 1s;
+  border-radius: 5px;
 }
 
 input[type="file"]::file-selector-button:hover {
-  background-color: #81ecec;
-  border: 2px solid #00cec9;
+  opacity: 100%;
+}
+
+.form-submitted {
+  display: none;
 }
